# flutter-luavm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: .project  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/github/tgarm/luavm/: LuaJNI.java  LuavmPlugin.java
android/src/main/native/: com_github_tgarm_luavm_LuaJNI.h  jni-headers.sh  lua-core.c  vm-plugin.c
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/github/tgarm/luavm_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/assets/lua/: add-test.lua  cj-test.lua  http-test.lua  lfs-test.lua  lib-add.lua  lsdir.lua  vmargs.lua
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  pickfile.dart
example/test/: widget_test.dart
ios/: luavm.podspec
ios/Classes/: Luavm.h  Luavm.m  LuavmPlugin.h  LuavmPlugin.m  vmplugin-mod.m
ios/lua-src/: lualib.h
lib/: errors.dart  luavm.dart
lua-src/: flutter_platform.h  lauxlib.h  linit.c
lua-src/cjson/: lua_cjson.c  lua_cjson.h
test/: luavm_test.dart
